# CTEventEngine

./: .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ct_event_engine/: runner.py
ct_event_engine/Websites/: cafe9.py  space_ballroom.py  utils.py
docker/: Dockerfile  build and deploy.sh  docker-compose.yml  entrypoint.sh
tests/: test_cafe9.py  test_space_ballroom.py
